# gcc-evolution

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.en.md  ARCHITECTURE.md  B1_trend_philosophy_audit_20260315.md  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_STRATEGY.en.md  CONTRIBUTING.en.md  CONTRIBUTOR_LICENSE_AGREEMENT.en.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  FRAMEWORK_BOUNDARY.en.md  FRAMEWORK_BOUNDARY.md  FREEMIUM_MODEL.md  GCC_Beginners_Guide_v5_305.docx  GCC_Beginners_Guide_v5_310.docx  GCC_Beginners_Guide_v5_330.docx  GCC_Beginners_Guide_v5_340.docx  GCC_Beginners_Guide_v5_345.docx  GCC_新手完全手册_v5_305.docx  GCC_新手完全手册_v5_330.docx  GCC_新手完全手册_v5_340.docx  GCC_新手完全手册_v5_345.docx  LAYER_STRUCTURE.md  Makefile  PAPER_LAYER_AUDIT_v5_345.md  PLUGIN_INVENTORY.md  PRICING.en.md  PRICING.md  PROGRAM_SPLIT_MAP.md  QUICKSTART.en.md  QUICKSTART.md  README.en.md  README.md  README.zh.md  RELEASE_CHECKLIST.md  (+106 more)
.github/: dependabot.yml
AIPro/: XXXX-X306.CSV  signal_direction_filter.py
AIPro/v5.640/: app.py  (+9 more)
backup/: B1_trading_system_audit_20260315.md
config/: human_knowledge_rules.json  of_config.yaml
configs/: seed_experiences.yaml
deploy/: .env.example  load_env.bat  requirements.txt  setup_windows.bat  start_all.bat
doc/: GCC_Beginners_Guide_v5_305.docx  GCC_Beginners_Guide_v5_320.docx  GCC_新手完全手册_v5_320.docx
docs/: dual_filter_paper.py  目录整理清单.md
gcc/: __init__.py  skillbank.jsonl
gcc_evolution/: README.md  __init__.py  __main__.py  advisor.py  analyzer.py  auto_card.py  backtest_store.py  card_bridge.py  cli.py  config.py  constraints.py  context_chain.py  crossover.py  da_audit.py  dashboard.py  dashboard_server.py  direction_anchor.py  distiller.py  divergence_monitor.py  duckdb_adapter.py  evaluator.py  experience_store.py  fault_tolerance.py  gcc_dashboard.html  gcc_db.py  gcc_evo.py  handoff.py  holdout.py  human_anchor.py  knowledge.py  l0_governance.py  layer_manifest.py  llm_client.py  local_llm.py  log_parser.py  mem_action.py  memory_tiers.py  migrate.py  models.py  normalizer.py  (+24 more)
improvement/: KEY-001_alpha_decay.md  KEY-001_network_momentum.md  KEY-001_paper_arxiv_2501.07135_20260224_004305.md  KEY-001_paper_arxiv_2512.11913_20260224_004305.md  KEY-004_finrl_ensemble.md  KEY-004_paper_arxiv_2209.10353_20260224_004247.md  KEY-004_paper_arxiv_2212.01467_20260224_004247.md  KEY-004_paper_openalex_W4320482263_20260224_004305.md  KEY-004_paper_openalex_W4391769953_20260224_004305.md  KEY-004_paper_semantic_scholar_018e23442dbac6cd383c52be4200007821f06437_20260224_004454.md  KEY-004_paper_semantic_scholar_3314863efff246ae64bb266dc920ae44afb24674_20260224_004454.md  KEY-004_paper_semantic_scholar_4bc48d23d84145c3b67a3b12d26f4fcfa9396852_20260224_004247.md  KEY-004_paper_semantic_scholar_5601e20971245003cec3e0b3b957e775cbf52478_20260224_004247.md  KEY-004_paper_semantic_scholar_98fd7aa1d3919dfab44a39892702319990e85258_20260224_004247.md  KEY-004_paper_semantic_scholar_98fd7aa1d3919dfab44a39892702319990e85258_20260224_004454.md  KEY-004_paper_ssrn_5920642_20260224_004305.md  KEY-004_spo_decision_quality.md
lib/: doc_to_knowledge.py  human_knowledge_rules.py  human_rule_validator.py
models/: auto_label_and_train_cnn.py  cnn_human_model.pt  labeling_tool.py  test_real_surge_buy.py  train_cnn_human.py  volume_analyzer.py
modules/: __init__.py  behavior_finance.py  correlation_monitor.py  dtw_pattern.py  es_risk_backtest.py  key001_vision_cache.py  key002_regime.py  key004_chanbs_improvement.py  key004_plugin_cache.py  plugin_evolver.py  stock_selector.py  strategy_iterator.py  trade_frequency.py  vision_adaptive.py  volume_analyzer.py
opensource/: .gitignore  CHANGELOG.md  COMMERCIAL_STRATEGY.md  CONTRIBUTING.md  ENTERPRISE_CONTRIBUTOR_LICENSE_AGREEMENT.en.md  ENTERPRISE_CONTRIBUTOR_LICENSE_AGREEMENT.md  GCC_新手完全手册_v5_295.docx  LICENSE  PRICING.md  QUICKSTART.en.md  README.en.md  README.md  setup.py
order_flow/: __init__.py  of_filter.py
research_inbox/: paper_arxiv_2501.07135_20260224_004305.md  paper_arxiv_2512.11913_20260224_004305.md  paper_semantic_scholar_018e23442dbac6cd383c52be4200007821f06437_20260224_004454.md  paper_semantic_scholar_4bc48d23d84145c3b67a3b12d26f4fcfa9396852_20260224_004247.md
safety/: .env.example  README.md  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  stop.sh
state/: _tmp_key009_dashboard.js  card_distilled.json  gcc_skills.json  human_sell_block.json  improvements.json  improvements.json.backup  key009_dashboard_live.html
tests/: test_distiller_gate.py  test_knn_evolution.py  test_orchestration_extensions.py  (+3 more)
(+210 files in other folders)
